--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "connection": {
     "login": "admin",
     "password": "admin",
-    "alfrescoUrl": "localhost:8080"
+    "alfrescoUrl": "http://localhost:8080"
   },
   "files": [
     {
