--- a/config.json
+++ b/config.json
@@ -11,6 +11,13 @@
     }
   ],
   "directories": [
-
+    {
+      "source": "/home/user/test",
+      "destination": "workspace://SpacesStore/17855f47-ef83-4eeb-b9f0-a41f07ab6cac"
+    },
+    {
+      "source": "/home/user/test2",
+      "destination": "workspace://SpacesStore/17855f47-ef83-4eeb-b9f0-a41f07ab6cac"
+    }
   ]
 }
