--- a/config.json
+++ b/config.json
@@ -1,23 +1,15 @@
 {
   "connection": {
-    "login": "admin",
-    "password": "admin",
-    "alfrescoUrl": "http://localhost:8080"
+    "login": "login",
+    "password": "password",
+    "url": "host"
   },
+  "sourceRoot": "/home/user/files",
+  "destinationRoot": "/remoteHost/files",
   "files": [
-    {
-      "source": "/home/user/projects/scripts/start.js",
-      "destination": "workspace://SpacesStore/17855f47-ef83-4eeb-b9f0-a41f07ab6cac"
-    }
+    "fileToSynchronize"
   ],
   "directories": [
-    {
-      "source": "/home/user/test",
-      "destination": "workspace://SpacesStore/17855f47-ef83-4eeb-b9f0-a41f07ab6cac"
-    },
-    {
-      "source": "/home/user/test2",
-      "destination": "workspace://SpacesStore/17855f47-ef83-4eeb-b9f0-a41f07ab6cac"
-    }
+    "directoryToSynchronize"
   ]
 }
